feat : 모자이크 / 편집 분기 UI 제작, fragment navigation 세팅

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ICEC</string>
+    <string name="edit_text">편집</string>
+    <string name="mosaic_text">모자이크</string>
 </resources>
