--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="edit_text">편집</string>
     <string name="mosaic_text">모자이크</string>
 
+    <!-- top_bar.xml -->
+    <string name="share_text">공유</string>
+    <string name="download_text">저장</string>
+
     <!-- MainActivity.kt -->
     <string name="accept_permission">%s 권한을 허용하였습니다.</string>
     <string name="reject_permission">%s 권한을 거부하였습니다.</string>
