refacor : dark theme 추가에 따른 모자이크 버튼, 편집 버튼 변경

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">ICEC</string>
 
     <!-- fragment_select_mosaic_edit.xml -->
-    <string name="edit_text">편집</string>
-    <string name="mosaic_text">모자이크</string>
+    <string name="edit_text">Edit</string>
+    <string name="mosaic_text">Blur</string>
 
     <!-- top_bar.xml -->
     <string name="share_text">공유</string>
