refactor : TopBar 레이아웃 디자인 수정에 따른 컴포넌트 동작 변경

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- fragment_select_mosaic_edit.xml -->
     <string name="edit_text">Edit</string>
-    <string name="mosaic_text">Blur</string>
+    <string name="mosaic_text">Mosaic</string>
 
     <!-- top_bar.xml -->
     <string name="share_text">공유</string>
