feat: String, color 리소스 추가

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="accept_permission">%s 권한을 허용하였습니다.</string>
     <string name="reject_permission">%s 권한을 거부하였습니다.</string>
     <string name="next_text">다음</string>
+    <string name="detect_face">얼굴 검출</string>
 </resources>
