feat : 디자인 수정에 따른 전체선택-해제 버튼 추가 및 디자인 수정

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- fragment_select_face.xml -->
     <string name="detected_face_count">%d명</string>
     <string name="detect_face_text">얼굴 검출</string>
+    <string name="all_select_text">전체 선택</string>
 
     <!-- fragment_select_mosaic_edit.xml -->
     <string name="edit_text">Edit</string>
