feat : 전체 선택 버튼 데이터 바인딩 적용 및 DetectFaceViewModel 생성

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <!-- fragment_select_face.xml -->
     <string name="detected_face_count">%d명</string>
     <string name="detect_face_text">얼굴 검출</string>
-    <string name="all_select_text">전체 선택</string>
+    <string name="select_all_text">전체 선택</string>
+    <string name="deselect_all_text">전체 해제</string>
 
     <!-- fragment_select_mosaic_edit.xml -->
     <string name="edit_text">Edit</string>
