--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">ICEC</string>
+    <!-- fragment_select_face.xml -->
+    <string name="detected_face_count">%d명</string>
+    <string name="detect_face_text">얼굴 검출</string>
+    <string name="select_all_text">전체 선택</string>
+    <string name="deselect_all_text">전체 해제</string>
 
     <!-- fragment_select_mosaic_edit.xml -->
     <string name="edit_text">Edit</string>
-    <string name="mosaic_text">Blur</string>
+    <string name="mosaic_text">Mosaic</string>
 
     <!-- top_bar.xml -->
     <string name="share_text">공유</string>
