--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="share_text">공유</string>
     <string name="download_text">저장</string>
     <string name="next_text">다음</string>
+    <string name="use_text">사용</string>
 
     <!-- MainActivity.kt -->
     <string name="accept_permission">%s 권한을 허용하였습니다.</string>
