--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="accept_permission">%s 권한을 허용하였습니다.</string>
     <string name="reject_permission">%s 권한을 거부하였습니다.</string>
 
+    <string name="photo">photo</string>
+    <string name="camera">camera</string>
 </resources>
