feat: snackbar 텍스트 추가

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="gallery_text">Gallery</string>
     <string name="camera_text">Camera</string>
 
+    <string name="snackbar_text">저장이 완료되었습니다~!</string>
 </resources>
