--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
-
     <string name="app_name">ICEC</string>
-
     <!-- fragment_select_face.xml -->
     <string name="detected_face_count">%d명</string>
     <string name="detect_face_text">얼굴 검출</string>
@@ -26,4 +24,7 @@
     <string name="gallery_text">Gallery</string>
     <string name="camera_text">Camera</string>
 
+    <!-- MosaicResultActivity.kt -->
+    <string name="snackbar_text">저장이 완료되었습니다~!</string>
+    <string name="save_done">저장 완료</string>
 </resources>
