--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <!-- MainActivity.kt -->
     <string name="accept_permission">%s 권한을 허용하였습니다.</string>
-    <string name="reject_permission">%s 권한을 거부하였습니다.</string>
+    <string name="reject_permission">모든 권한을 허용해야 사용이 가능합니다.</string>
 
     <!-- StartActivity.kt -->
     <string name="gallery_text">Gallery</string>
